--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ disqus_username: dboy_sl
 
 # Analytics settings
 # Baidu Analytics
-#ba_track_id: b50bf2b12b5338a1845e33832976fd68
+ba_track_id: b105050f6e5279a24fafedbfc0e4530a
 
 # Google Analytics
 #ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
